--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>penguin-fashion-website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .font {
+            font-family: 'Bebas Neue', sans-serif;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>hello world</h1>
+    <header>
+        <div>
+            <h1 class="font text-7xl font-normal">
+                <span class="text-[#FABE4C]">Be the Penguins</span>
+                of Winter
+            </h1>
+        </div>
+        <div></div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
+
 </html>
